--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ $RECYCLE.BIN/
 /HuffmanCodering/nbproject/private/
 /HuffmanCodering/build/
 /HuffmanCodering/dist/
+/Java Collections in JavaFX/dist/
+/Java Collections in JavaFX/build/
