--- a/Java Collections in JavaFX/nbproject/project.properties
+++ b/Java Collections in JavaFX/nbproject/project.properties
@@ -78,7 +78,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=java.collections.in.javafx.JavaCollectionsInJavaFX
+javafx.main.class=applicatiepackage.JavaCollectionsInJavaFX
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
