--- a/bank/pom.xml
+++ b/bank/pom.xml
@@ -44,7 +44,7 @@
     <dependency>
       <groupId>org.eclipse.persistence</groupId>
       <artifactId>eclipselink</artifactId>
-      <version>2.5.0-SNAPSHOT</version>
+      <version>2.6.1</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.persistence</groupId>
