--- a/bank/pom.xml
+++ b/bank/pom.xml
@@ -57,5 +57,20 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.37</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derby</artifactId>
+      <version>10.12.1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derbyclient</artifactId>
+      <version>10.12.1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derbynet</artifactId>
+      <version>10.12.1.1</version>
+    </dependency>
   </dependencies>
 </project>
